--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
 apply plugin: 'android-library'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.0.0'
+    }
+}
+
 android {
     compileSdkVersion 17
     buildToolsVersion '19.1.0'
 
     sourceSets {
-        defaultConfig {
-            testPackageName 'com.android.volley.tests'
-        }
 
         main {
             assets.srcDirs       = ['assets']
